user_service/postgres-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-deploy
  template:
    metadata:
      labels:
        app: postgres-deploy
    spec:
      volumes:
        - name: postgres-pv-storage
          persistentVolumeClaim:
            claimName: postgres-pvc-storage
      containers:
        - name: postgres
          image: postgres:alpine3.15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pv-storage

---

apiVersion: v1

kind: Service

metadata:
  name: postgres-service
  labels:
    app: postgres-service
spec:
  type: NodePort
  ports:
  - port: 5432
  selector:
    app: postgres-deploy
