user_service/user_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-deployment
  ports:
    - name: user-service
      port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  selector:
    matchLabels:
      app: user-deployment
  template:
    metadata:
      labels:
        app: user-deployment
    spec:
      containers:
        - name: user-container
          image: michaellazebny/wtc_system.user_service:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
